<?xml version="1.0"?>
<package format="2">
  <name>dart_urdf</name>
  <version>0.0.0</version>
  <description>URDF plugin for DART</description>
  <maintainer email="Christian.Rauch@ed.ac.uk">Christian Rauch</maintainer>

  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>dart</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
